Package_Tools/glib/Package_Tools/include-C/glib-2.0/glib/in_arbeit/gvariant.pp


unit gvariant;
interface

{
  Automatically converted by H2Pas 1.0.0 from gvariant.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    gvariant.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
PGBytes  = ^GBytes;
Pgchar  = ^gchar;
PGError  = ^GError;
Pgsize  = ^gsize;
PGString  = ^GString;
PGVariant  = ^GVariant;
PGVariantBuilder  = ^GVariantBuilder;
PGVariantClass  = ^GVariantClass;
PGVariantDict  = ^GVariantDict;
PGVariantIter  = ^GVariantIter;
PGVariantParseError  = ^GVariantParseError;
PGVariantType  = ^GVariantType;
Pva_list  = ^va_list;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{
 * Copyright © 2007, 2008 Ryan Lortie
 * Copyright © 2009, 2010 Codethink Limited
 *
 * SPDX-License-Identifier: LGPL-2.1-or-later
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, see <http://www.gnu.org/licenses/>.
 *
 * Author: Ryan Lortie <desrt@desrt.ca>
  }
{$ifndef __G_VARIANT_H__}
{$define __G_VARIANT_H__}
{$if !defined (__GLIB_H_INSIDE__) && !defined (GLIB_COMPILATION)}
{$error "Only <glib.h> can be included directly."}
{$endif}
{$include <glib/gvarianttype.h>}
{$include <glib/gstring.h>}
{$include <glib/gbytes.h>}
type

  PGVariantClass = ^TGVariantClass;
  TGVariantClass =  Longint;
  Const
    G_VARIANT_CLASS_BOOLEAN = 'b';
    G_VARIANT_CLASS_BYTE = 'y';
    G_VARIANT_CLASS_INT16 = 'n';
    G_VARIANT_CLASS_UINT16 = 'q';
    G_VARIANT_CLASS_INT32 = 'i';
    G_VARIANT_CLASS_UINT32 = 'u';
    G_VARIANT_CLASS_INT64 = 'x';
    G_VARIANT_CLASS_UINT64 = 't';
    G_VARIANT_CLASS_HANDLE = 'h';
    G_VARIANT_CLASS_DOUBLE = 'd';
    G_VARIANT_CLASS_STRING = 's';
    G_VARIANT_CLASS_OBJECT_PATH = 'o';
    G_VARIANT_CLASS_SIGNATURE = 'g';
    G_VARIANT_CLASS_VARIANT = 'v';
    G_VARIANT_CLASS_MAYBE = 'm';
    G_VARIANT_CLASS_ARRAY = 'a';
    G_VARIANT_CLASS_TUPLE = '(';
    G_VARIANT_CLASS_DICT_ENTRY = '{';
;

procedure g_variant_unref(value:PGVariant);cdecl;external;
function g_variant_ref(value:PGVariant):PGVariant;cdecl;external;
function g_variant_ref_sink(value:PGVariant):PGVariant;cdecl;external;
function g_variant_is_floating(value:PGVariant):Tgboolean;cdecl;external;
function g_variant_take_ref(value:PGVariant):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_get_type(value:PGVariant):PGVariantType;cdecl;external;
(* Const before type ignored *)
function g_variant_get_type_string(value:PGVariant):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_variant_is_of_type(value:PGVariant; _type:PGVariantType):Tgboolean;cdecl;external;
function g_variant_is_container(value:PGVariant):Tgboolean;cdecl;external;
function g_variant_classify(value:PGVariant):TGVariantClass;cdecl;external;
function g_variant_new_boolean(value:Tgboolean):PGVariant;cdecl;external;
function g_variant_new_byte(value:Tguint8):PGVariant;cdecl;external;
function g_variant_new_int16(value:Tgint16):PGVariant;cdecl;external;
function g_variant_new_uint16(value:Tguint16):PGVariant;cdecl;external;
function g_variant_new_int32(value:Tgint32):PGVariant;cdecl;external;
function g_variant_new_uint32(value:Tguint32):PGVariant;cdecl;external;
function g_variant_new_int64(value:Tgint64):PGVariant;cdecl;external;
function g_variant_new_uint64(value:Tguint64):PGVariant;cdecl;external;
function g_variant_new_handle(value:Tgint32):PGVariant;cdecl;external;
function g_variant_new_double(value:Tgdouble):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_new_string(_string:Pgchar):PGVariant;cdecl;external;
function g_variant_new_take_string(_string:Pgchar):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_new_printf(format_string:Pgchar; args:array of const):PGVariant;cdecl;external;
function g_variant_new_printf(format_string:Pgchar):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_new_object_path(object_path:Pgchar):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_is_object_path(_string:Pgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_variant_new_signature(signature:Pgchar):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_is_signature(_string:Pgchar):Tgboolean;cdecl;external;
function g_variant_new_variant(value:PGVariant):PGVariant;cdecl;external;
(* Const before type ignored *)
(* Const before declarator ignored *)
function g_variant_new_strv(strv:PPgchar; length:Tgssize):PGVariant;cdecl;external;
(* Const before type ignored *)
(* Const before declarator ignored *)
function g_variant_new_objv(strv:PPgchar; length:Tgssize):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_new_bytestring(_string:Pgchar):PGVariant;cdecl;external;
(* Const before type ignored *)
(* Const before declarator ignored *)
function g_variant_new_bytestring_array(strv:PPgchar; length:Tgssize):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_new_fixed_array(element_type:PGVariantType; elements:Tgconstpointer; n_elements:Tgsize; element_size:Tgsize):PGVariant;cdecl;external;
function g_variant_get_boolean(value:PGVariant):Tgboolean;cdecl;external;
function g_variant_get_byte(value:PGVariant):Tguint8;cdecl;external;
function g_variant_get_int16(value:PGVariant):Tgint16;cdecl;external;
function g_variant_get_uint16(value:PGVariant):Tguint16;cdecl;external;
function g_variant_get_int32(value:PGVariant):Tgint32;cdecl;external;
function g_variant_get_uint32(value:PGVariant):Tguint32;cdecl;external;
function g_variant_get_int64(value:PGVariant):Tgint64;cdecl;external;
function g_variant_get_uint64(value:PGVariant):Tguint64;cdecl;external;
function g_variant_get_handle(value:PGVariant):Tgint32;cdecl;external;
function g_variant_get_double(value:PGVariant):Tgdouble;cdecl;external;
function g_variant_get_variant(value:PGVariant):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_get_string(value:PGVariant; length:Pgsize):Pgchar;cdecl;external;
function g_variant_dup_string(value:PGVariant; length:Pgsize):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_variant_get_strv(value:PGVariant; length:Pgsize):^Pgchar;cdecl;external;
function g_variant_dup_strv(value:PGVariant; length:Pgsize):^Pgchar;cdecl;external;
(* Const before type ignored *)
function g_variant_get_objv(value:PGVariant; length:Pgsize):^Pgchar;cdecl;external;
function g_variant_dup_objv(value:PGVariant; length:Pgsize):^Pgchar;cdecl;external;
(* Const before type ignored *)
function g_variant_get_bytestring(value:PGVariant):Pgchar;cdecl;external;
function g_variant_dup_bytestring(value:PGVariant; length:Pgsize):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_variant_get_bytestring_array(value:PGVariant; length:Pgsize):^Pgchar;cdecl;external;
function g_variant_dup_bytestring_array(value:PGVariant; length:Pgsize):^Pgchar;cdecl;external;
(* Const before type ignored *)
function g_variant_new_maybe(child_type:PGVariantType; child:PGVariant):PGVariant;cdecl;external;
(* Const before type ignored *)
(* Const before declarator ignored *)
function g_variant_new_array(child_type:PGVariantType; children:PPGVariant; n_children:Tgsize):PGVariant;cdecl;external;
(* Const before declarator ignored *)
function g_variant_new_tuple(children:PPGVariant; n_children:Tgsize):PGVariant;cdecl;external;
function g_variant_new_dict_entry(key:PGVariant; value:PGVariant):PGVariant;cdecl;external;
function g_variant_get_maybe(value:PGVariant):PGVariant;cdecl;external;
function g_variant_n_children(value:PGVariant):Tgsize;cdecl;external;
(* Const before type ignored *)
procedure g_variant_get_child(value:PGVariant; index_:Tgsize; format_string:Pgchar; args:array of const);cdecl;external;
procedure g_variant_get_child(value:PGVariant; index_:Tgsize; format_string:Pgchar);cdecl;external;
function g_variant_get_child_value(value:PGVariant; index_:Tgsize):PGVariant;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_lookup(dictionary:PGVariant; key:Pgchar; format_string:Pgchar; args:array of const):Tgboolean;cdecl;external;
function g_variant_lookup(dictionary:PGVariant; key:Pgchar; format_string:Pgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_lookup_value(dictionary:PGVariant; key:Pgchar; expected_type:PGVariantType):PGVariant;cdecl;external;
function g_variant_get_fixed_array(value:PGVariant; n_elements:Pgsize; element_size:Tgsize):Tgconstpointer;cdecl;external;
function g_variant_get_size(value:PGVariant):Tgsize;cdecl;external;
function g_variant_get_data(value:PGVariant):Tgconstpointer;cdecl;external;
function g_variant_get_data_as_bytes(value:PGVariant):PGBytes;cdecl;external;
procedure g_variant_store(value:PGVariant; data:Tgpointer);cdecl;external;
function g_variant_print(value:PGVariant; type_annotate:Tgboolean):Pgchar;cdecl;external;
function g_variant_print_string(value:PGVariant; _string:PGString; type_annotate:Tgboolean):PGString;cdecl;external;
function g_variant_hash(value:Tgconstpointer):Tguint;cdecl;external;
function g_variant_equal(one:Tgconstpointer; two:Tgconstpointer):Tgboolean;cdecl;external;
function g_variant_get_normal_form(value:PGVariant):PGVariant;cdecl;external;
function g_variant_is_normal_form(value:PGVariant):Tgboolean;cdecl;external;
function g_variant_byteswap(value:PGVariant):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_new_from_bytes(_type:PGVariantType; bytes:PGBytes; trusted:Tgboolean):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_new_from_data(_type:PGVariantType; data:Tgconstpointer; size:Tgsize; trusted:Tgboolean; notify:TGDestroyNotify; 
           user_data:Tgpointer):PGVariant;cdecl;external;
type
{< private > }
  PGVariantIter = ^TGVariantIter;
  TGVariantIter = record
      x : array[0..15] of Tguintptr;
    end;

